--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,6 +1,8 @@
 parameters:
-  level: 0
+  level: 4
   paths:
     - src
   scanDirectories:
     - /Users/luca/code/open-source/bga-sharedcode/misc/module
+  scanFiles:
+    - constants.php
