--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 .vscode/sftp.json
 node_modules
 vendor
+
+# created after npm run build
+server/img/*
+server/modules/main.js
+server/highliukreversitutorial.css
