--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
+  "name": "reversi-tutorial",
+  "type": "module",
   "devDependencies": {
     "@prettier/plugin-php": "^0.19.4",
-    "prettier": "^2.8.7"
+    "@vitejs/plugin-vue": "^4.1.0",
+    "prettier": "^2.8.7",
+    "typescript": "^5.0.3",
+    "vite": "^4.2.1",
+    "vue": "^3.2.47",
+    "vue-tsc": "^1.2.0"
   },
   "scripts": {
+    "dev": "vite",
+    "build": "vue-tsc && vite build",
     "format": "prettier -wu ."
   }
 }
